add relate games

--- a/pages/bus-rush.mdx
+++ b/pages/bus-rush.mdx
@@ -1,28 +1,28 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Bus Rush
+description: Bus Rush is an endless runner game set in vibrant urban landscapes. Dodge obstacles, collect coins, and unlock characters with intuitive swipe controls for a fast-paced, strategic adventure.
+image: /assets/images/games/bus-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Bus_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Bus Rush",
+    iframe_url: "https://html5.gamemonetize.co/k8pntef9is1lvl1mb4c1xsqg69cs9msu/",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
     {
-    name: "Bus Rush",
-    href: "/bus-rush",
-    image: "/assets/images/games/bus-rush.webp",
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
     },
     {
     name: "Car Rush",
