--- a/pages/car-rush.mdx
+++ b/pages/car-rush.mdx
@@ -1,33 +1,33 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Car Rush
+description: Car Rush is an exciting racing game where players navigate through thrilling tracks, dodge obstacles, and race against time. Master high-speed maneuvers and strategic driving!
+image: /assets/images/games/car-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Car_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Car Rush",
+    iframe_url: "https://www.ilibrarian.net/games/car-rush/index.html",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
     image: "/assets/images/games/bus-rush.webp",
-    },
-    {
-    name: "Car Rush",
-    href: "/car-rush",
-    image: "/assets/images/games/car-rush.webp",
     },
     {
     name: "Cluster Rush",
