--- a/pages/cluster-rush.mdx
+++ b/pages/cluster-rush.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Cluster Rush
+description: Cluster Rush is an adrenaline-pumping first-person platformer where you jump and climb on moving trucks, dodge dynamic obstacles, and master rhythmic gameplay across 35 challenging levels.
+image: /assets/images/games/cluster-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Cluster_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Cluster Rush",
+    iframe_url: "https://clusterrush.io/game/cluster-rush/",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -28,11 +33,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Car Rush",
     href: "/car-rush",
     image: "/assets/images/games/car-rush.webp",
-    },
-    {
-    name: "Cluster Rush",
-    href: "/cluster-rush",
-    image: "/assets/images/games/cluster-rush.webp",
     },
     {
     name: "Curve Ball 3D",
