--- a/pages/curve-ball-3d.mdx
+++ b/pages/curve-ball-3d.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Curve Ball 3D
+description: Curve Ball 3D is an immersive 3D arcade game with unique ball spin mechanics. Learn about its gameplay, controls, features, strategies, and enjoy an engaging video demonstration.
+image: /assets/images/games/curve-ball-3d.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Curve_Ball_3D';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Curve Ball 3D",
+    iframe_url: "https://gswitch3.github.io/g/curve-ball-3d",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -33,11 +38,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Cluster Rush",
     href: "/cluster-rush",
     image: "/assets/images/games/cluster-rush.webp",
-    },
-    {
-    name: "Curve Ball 3D",
-    href: "/curve-ball-3d",
-    image: "/assets/images/games/curve-ball-3d.webp",
     },
     {
     name: "Curveball",
