--- a/pages/curveball.mdx
+++ b/pages/curveball.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Curveball
+description: Curveball is a engaging 3D arcade game that combines classic Pong elements with modern spin mechanics. Learn about its gameplay, controls, key features, strategies for success, and watch a gameplay video to master the curve.
+image: /assets/images/games/curveball.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Curveball';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Curveball",
+    iframe_url: "https://games.engineering.com/curveball/curveball.html",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -38,11 +43,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Curve Ball 3D",
     href: "/curve-ball-3d",
     image: "/assets/images/games/curve-ball-3d.webp",
-    },
-    {
-    name: "Curveball",
-    href: "/curveball",
-    image: "/assets/images/games/curveball.webp",
     },
     {
     name: "Jet Rush",
