--- a/pages/jet-rush.mdx
+++ b/pages/jet-rush.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Jet Rush
+description: Jet Rush, an arcade-style aerial adventure where you pilot a high-tech jet through challenging courses, collect coins, and unlock upgrades. Learn about gameplay, controls, key features, and winning strategies.
+image: /assets/images/games/jet-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Jet_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Jet Rush",
+    iframe_url: "https://www.gogy.com/games/jet-rush-iframe",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -43,11 +48,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Curveball",
     href: "/curveball",
     image: "/assets/images/games/curveball.webp",
-    },
-    {
-    name: "Jet Rush",
-    href: "/jet-rush",
-    image: "/assets/images/games/jet-rush.webp",
     },
     {
     name: "Pencil Rush",
