--- a/pages/pencil-rush.mdx
+++ b/pages/pencil-rush.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Pencil Rush 
+description: Pencil Rush is a creative endless runner where you dodge obstacles, collect colorful pencils, and create unique artwork. Learn about gameplay, controls, features, strategies, and more.
+image: /assets/images/games/pencil-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Pencil_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Pencil Rush",
+    iframe_url: "https://www.yad.com/games/Pencil-Rush-Online/index.html?yad",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -48,11 +53,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Jet Rush",
     href: "/jet-rush",
     image: "/assets/images/games/jet-rush.webp",
-    },
-    {
-    name: "Pencil Rush",
-    href: "/pencil-rush",
-    image: "/assets/images/games/pencil-rush.webp",
     },
     {
     name: "Rhino Rush Stampede",
