--- a/pages/tunnel-rush.mdx
+++ b/pages/tunnel-rush.mdx
@@ -1,24 +1,29 @@
 ---
-title: Curve Rush
-description: Curve Rush is an arcade-style game that challenges your speed, precision, and strategy as you navigate rolling balls through endless desert landscapes.
-image: /assets/images/games/curve-rush.webp
+title: Tunnel Rush
+description: Tunnel Rush is a fast-paced endless runner that challenges your reflexes in a dynamic 3D tunnel. Dodge obstacles, master the controls, and experience a unique, ever-changing environment.
+image: /assets/images/games/tunnel-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Curve_Rush';
+import Article from '@components/games/Article_Tunnel_Rush';
   
 <GamePage 
     main_game={{
-    name: "Curve Rush",
-    iframe_url: "https://suikagame.io/curve-rush.embed",
+    name: "Tunnel Rush",
+    iframe_url: "https://tunnelrushgame.io/game/tunnel-rush/",
     votes: 4328,
     score: 4.7
-    }} 
+}} 
 
     Article={Article}
-    
+
     relate_games={[
+    {
+    name: "Curve Rush",
+    href: "/curve-rush",
+    image: "/assets/images/games/curve-rush.webp",
+    },
     {
     name: "Bus Rush",
     href: "/bus-rush",
@@ -58,11 +63,6 @@ import Article from '@components/games/Article_Curve_Rush';
     name: "Rhino Rush Stampede",
     href: "/rhino-rush-stampede",
     image: "/assets/images/games/rhino-rush-stampede.webp",
-    },
-    {
-    name: "Tunnel Rush",
-    href: "/tunnel-rush",
-    image: "/assets/images/games/tunnel-rush.webp",
     }
     ]}
  />
