add relate games

--- a/pages/cluster-rush.mdx
+++ b/pages/cluster-rush.mdx
@@ -31,7 +31,7 @@ import Article from '@components/games/Article_Cluster_Rush';
     },
     {
     name: "Car Rush",
-    href: "/car-rush",
+    href: "/",
     image: "/assets/images/games/car-rush.webp",
     },
     {
