--- a/pages/curve-ball-3d.mdx
+++ b/pages/curve-ball-3d.mdx
@@ -21,7 +21,7 @@ import Article from '@components/games/Article_Curve_Ball_3D';
     relate_games={[
     {
     name: "Curve Rush",
-    href: "/curve-rush",
+    href: "/",
     image: "/assets/images/games/curve-rush.webp",
     },
     {
