--- a/pages/car-rush.mdx
+++ b/pages/car-rush.mdx
@@ -21,7 +21,7 @@ import Article from '@components/games/Article_Car_Rush';
     relate_games={[
     {
     name: "Curve Rush",
-    href: "/curve-rush",
+    href: "/",
     image: "/assets/images/games/curve-rush.webp",
     },
     {
