--- a/pages/rhino-rush-stampede.mdx
+++ b/pages/rhino-rush-stampede.mdx
@@ -21,7 +21,7 @@ import Article from '@components/games/Article_Rhino_Rush_Stampede';
     relate_games={[
     {
     name: "Curve Rush",
-    href: "/curve-rush",
+    href: "/",
     image: "/assets/images/games/curve-rush.webp",
     },
     {
