--- a/pages/curve-ball-3d.mdx
+++ b/pages/curve-ball-3d.mdx
@@ -63,6 +63,16 @@ import Article from '@components/games/Article_Curve_Ball_3D';
     name: "Tunnel Rush",
     href: "/tunnel-rush",
     image: "/assets/images/games/tunnel-rush.webp",
+    },
+    {
+    "name": "Kingdom Rush",
+    "href": "/kingdom-rush",
+    "image": "/assets/images/games/kingdom-rush.webp",
+    },
+    {
+    "name": "Survival Rush",
+    "href": "/survival-rush",
+    "image": "/assets/images/games/survival-rush.webp",
     }
     ]}
  />
