--- a/pages/survival-rush.mdx
+++ b/pages/survival-rush.mdx
@@ -1,17 +1,17 @@
 ---
-title: Car Rush
-description: Car Rush is an exciting racing game where players navigate through thrilling tracks, dodge obstacles, and race against time. Master high-speed maneuvers and strategic driving!
-image: /assets/images/games/car-rush.webp
+title: Survival Rush
+description: Survival Rush is a dynamic multiplayer survival action game packed with innovative challenges, intuitive controls, and endless strategic gameplay. Join the ultimate survival adventure now!
+image: /assets/images/games/survival-rush.webp
 date: 2025-02-15
 ---
 
 import GamePage from '@components/games/GamePage';
-import Article from '@components/games/Article_Car_Rush';
+import Article from '@components/games/Article_Survival_Rush';
   
 <GamePage 
     main_game={{
-    name: "Car Rush",
-    iframe_url: "https://www.ilibrarian.net/games/car-rush/index.html",
+    name: "Survival Rush",
+    iframe_url: "https://play.gamepix.com/survival-rush/embed",
     votes: 4328,
     score: 4.7
 }} 
@@ -28,6 +28,11 @@ import Article from '@components/games/Article_Car_Rush';
     name: "Bus Rush",
     href: "/bus-rush",
     image: "/assets/images/games/bus-rush.webp",
+    },
+    {
+    name: "Car Rush",
+    href: "/car-rush",
+    image: "/assets/images/games/car-rush.webp",
     },
     {
     name: "Cluster Rush",
@@ -58,11 +63,6 @@ import Article from '@components/games/Article_Car_Rush';
     name: "Rhino Rush Stampede",
     href: "/rhino-rush-stampede",
     image: "/assets/images/games/rhino-rush-stampede.webp",
-    },
-    {
-    name: "Tunnel Rush",
-    href: "/tunnel-rush",
-    image: "/assets/images/games/tunnel-rush.webp",
     },
     {
     "name": "Kingdom Rush",
