--- a/pages/tunnel-rush.mdx
+++ b/pages/tunnel-rush.mdx
@@ -63,6 +63,16 @@ import Article from '@components/games/Article_Tunnel_Rush';
     name: "Rhino Rush Stampede",
     href: "/rhino-rush-stampede",
     image: "/assets/images/games/rhino-rush-stampede.webp",
+    },
+    {
+    "name": "Kingdom Rush",
+    "href": "/kingdom-rush",
+    "image": "/assets/images/games/kingdom-rush.webp",
+    },
+    {
+    "name": "Survival Rush",
+    "href": "/survival-rush",
+    "image": "/assets/images/games/survival-rush.webp",
     }
     ]}
  />
